<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Sensor Pong</string>

    <!-- Image Descriptors -->
    <string name="btn1desc" translatable="false">Button for 1 player games</string>
    <string name="btn2desc" translatable="false">Button for 2 players games</string>
    <string name="btnTrngDesc" translatable="false">Button for training games</string>
    <string name="btnAboutDesc" translatable="false">Button for app infos</string>
    <string name="logoniversitydesc" translatable="false">University of \"Federico II\" logo</string>
    <string name="imgGame" translatable="false">Main figure of game</string>

    <!-- Main Activity Strings -->
    <string name="one_player">One Player</string>
    <string name="two_player">Two Players</string>
    <string name="training">Training</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="about" translatable="false">About Us</string>
    <string name="ttl_main_adv">Exit Game</string>
    <string name="txt_main_adv">Do you really want to exit game?</string>

    <!-- First access -->
    <string name="hello_view">Please, enter your nickname</string>
    <string name="nickname" translatable="false">Nickname</string>
    <string name="submit" translatable="false">OK</string>

    <!-- General game -->
    <string name="text_pause">Pause</string>
    <string name="text_gameover" translatable="false">Game Over</string>

    <!-- 2 Player Activity -->
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_enemy">Play with</string>
    <string name="text_none" translatable="false"><![CDATA[<none>]]></string>
    <string name="text_play">Play</string>
    <string name="text_help">Help.</string>
    <string name="text_paired">Paired</string>
    <string name="text_scan">Scan</string>
    <string name="none_found">No discoverable device found</string>
    <string name="text_msg_twoplayer_leave">You\'ll be disconnect. Are you sure?</string>

    <!-- 2 Player Game -->
    <string name="text_disconnected">Disconnected</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_discoverable">Discoverable</string>
    <string name="text_opponent_left">Your opponent\nleft the game</string>
    <string name="text_opponent_pause">Your opponent\npaused the game</string>
    <string name="text_opponent_not_ready">Your opponent\nis not ready</string>
    <string name="text_waiting">Waiting for\nyour opponent</string>
    <string name="text_exit_pause" translatable="false">Your opponent\nis in pause</string>
    <string name="text_pause_not_allowed">Pause not\nallowed now</string>
    <string name="text_you_win">You win\nthe game</string>
    <string name="text_you_lose">You lose\nthe game</string>
    <string name="pause_stop">Temporarily\nstop the game</string>
    <string name="text_game_suspended">Game temporarily\nsuspended</string>

    <!-- Toasts -->
    <string name="toast_bluetoothNotSupported">Bluetooth not supported on your device</string>
    <string name="toast_bluetoothActived">Bluetooth actived</string>
    <string name="toast_bluetoothDeactived">Bluetooth disabled</string>
    <string name="toast_notConnected">You\'re not connected to any devices</string>
    <string name="toast_unableConnect">Unable to connect device</string>
    <string name="toast_connectionLost">Device connection was lost</string>
    <string name="txt_hi">Hi</string>

    <!-- Stats Activity -->
    <string name="sts_multi_play">Played</string>
    <string name="sts_multi_win">Win</string>
    <string name="sts_multi_perc">Winning rate</string>
    <string name="sts_null" translatable="false">Null</string>
    <string name="sts_position" translatable="false">#</string>
    <string name="sts_name">Player</string>
    <string name="sts_score">Score</string>
    <string name="sts_date">Date</string>

    <!-- Alert Dialog -->
    <string name="alert_bluetooth_activator">Bluetooth is disabled, please active bluetooth and retry. Do you want to activate bluetooth now?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no" translatable="false">No</string>

    <!-- One Player -->
    <string name="text_score">Score</string>
    <string name="text_lvl">Level</string>
    <string name="text_first_enemy" translatable="false">First Enemy</string>
    <string name="text_bubble" translatable="false">Bubble Bonus</string>
    <string name="text_cut_bar_30">Cut Bar 30%</string>
    <string name="text_lifebonus" translatable="false">Life Bonus</string>
    <string name="text_cut_bar_50">Cut Bar 50%</string>
    <string name="text_big_bar" translatable="false">Big Bar</string>
    <string name="text_reverse" translatable="false">Reverse</string>
    <string name="text_freeze" translatable="false">Freeze</string>
    <string name="text_rush" translatable="false">Rush Hour</string>
    <string name="text_ttl_oneplayer_leavegame">Leave the game</string>
    <string name="text_msg_oneplayer_leavegame">You\'ll lose the game. Are you sure?</string>
    <string name="text_ttl_oneplayer_savegame">Save the game score</string>
    <string name="text_msg_oneplayer_savegame">Do you want to save this score?</string>
    <string name="text_no_user_input">Please, insert a valid name</string>

    <!-- Training Game -->
    <string name="text_ttl_training_leave">Leave training</string>
    <string name="text_msg_training_leave">Are you sure to quit training?</string>
    <string name="text_hit" translatable="false">Hit</string>
    <string name="text_ball_speed">Ball Speed</string>
    <string name="text_bar_speed">Bar Speed</string>
    <string name="text_active_events">Select Event</string>
    <string name="back">BACK</string>
    <string-array name="ball_speed_spinner">
        <item>x1</item>
        <item>x2</item>
        <item>x3</item>
        <item>x4</item>
        <item>x5</item>
    </string-array>
    <string-array name="bar_speed_spinner">
        <item>x1</item>
        <item>x2</item>
        <item>x3</item>
    </string-array>
    <string-array name="event_spinner">
        <item>No event</item>
        <item>First Enemy</item>
        <item>Cut bar 30%</item>
        <item>Cut bar 50%</item>
        <item>Reverse</item>
        <item>Rush Hour</item>
    </string-array>

    <!-- Settings text -->
    <string name="settings_title">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="settings_nickname" translatable="false">Nickname</string>
    <string name="settings_nickname_info">Set Your Nickname</string>
    <string name="settings_theme">Game Theme</string>
    <string name="settings_theme_info">Set the Game Theme</string>
    <string name="txt_no_name" translatable="false">No Name</string>

    <string name="hello_world" translatable="false">Hello world!</string>

    <!-- About Activity Strings -->
    <string name="text_app_about_description">
        <![CDATA[
            <!doctype html>
                <html>
                    <body>
                        <h1>About Sensor Pong</h1>
                        <p><em>Sensor Pong is a&nbsp;revisiting of the 70&#39; famous game of Atari named &quot;Pong&quot;</em></p>
                        <p>This app has been developed&nbsp;by students of University &quot;Federico II&quot;, Naples.<br/>
                        It is a project created within software engineering&#39;s course of 2014/2015 academic year.</p>
                        <p>If you try this application and want to report us suggestes or report bugs, please contact us to our email:</p>
                        <p><a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a></p>
                        <p>Developers: (in alphabetical order):</p>
                            - Gargiulo Alessandro<br/>
                            - Marigliano Francesco<br/>
                            - Saviano Gabriele<br/>
                            - Toscano Giovanni<br/>
                        <br/>
                        The application use <a href="http://www.andengine.org/">AndEngine</a> for the development of some of its features.
                        <br/><br/>
                        <h2>Changelog</h2>
                        <b>Version 1.0<b>
                            *Launch version.<br/>
                        <br/>
                        <p style="text-align: center;">&nbsp;</p>
                    </body>
                </html>
        ]]>
    </string>

</resources>
