<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.unina.is2project.sensorgames.pong.TrainingSettings"
    android:background="#ff000000"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:id="@+id/title_setting_training"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/home_font"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ball_speed"
        android:id="@+id/txt_ball_speed"
        android:textColor="#ffffffff"
        android:textSize="@dimen/medium_font" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_ball_speed"
        android:background="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bar_speed"
        android:id="@+id/txt_bar_speed"
        android:textColor="#ffffffff"
        android:textSize="@dimen/medium_font" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_bar_speed"
        android:background="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_back"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
