<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.unina.is2project.sensorgames.stats.activity.StatsActivity"
    android:background="#ff000000"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stats"
        android:id="@+id/txt_stat"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/home_font"
        android:textColor="#ffffffff" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_player"
        android:id="@+id/txt_single"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textStyle="italic"
        android:textSize="@dimen/medium_font" />

    <ListView
        android:id="@+id/listViewDemo"
        android:layout_width="fill_parent"
        android:layout_height="164dp"
        android:layout_weight="0.46"></ListView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player"
        android:id="@+id/txt_multi"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="@dimen/medium_font"
        android:textColor="#ffffffff" />

    <Spinner
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:id="@+id/spinnerTwoPlayer"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown"

        android:textColor="#000000"
        android:background="#ffffff"
        android:popupBackground="#ffffff"
        android:backgroundTint="#000000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_multi_play"
                android:id="@+id/textView"
                android:layout_column="0"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:layout_weight="0.33"
                android:textSize="@dimen/medium_font"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_multi_win"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:layout_weight="0.33"
                android:textSize="@dimen/medium_font"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_multi_perc"
                android:id="@+id/textView3"
                android:layout_column="2"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:layout_weight="0.33"
                android:textSize="@dimen/medium_font"
                android:gravity="center_vertical|center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_null"
                android:id="@+id/textViewGiocate"
                android:layout_column="0"
                android:textColor="#ffffffff"
                android:textSize="@dimen/medium_font"
                android:layout_weight="0.33"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_null"
                android:id="@+id/textViewVinte"
                android:textColor="#ffffffff"
                android:textSize="@dimen/medium_font"
                android:layout_weight="0.33"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sts_null"
                android:id="@+id/textViewWinningRate"
                android:textColor="#ffffffff"
                android:textSize="@dimen/medium_font"
                android:layout_weight="0.33"
                android:gravity="center_vertical|center_horizontal" />
        </TableRow>
    </TableLayout>

</LinearLayout>
